<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="191dp"
        android:layout_height="206dp"
        android:src="@drawable/adidasf50" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sepatu Adidas F50"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Qty:1 x @ Rp. 1.500.000,-"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Total: Rp. 1.500.000,-"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    
    <EditText
        android:id="@+id/editTextCCNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cc_number_text"
        android:ems="10" 
        android:maxLength="16" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/editTextCCMonth"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:ems="10"
            android:hint="@string/cc_month_text"
            android:maxLength="2" />

        <EditText
            android:id="@+id/editTextCCYear"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.07"
            android:ems="10"
            android:hint="@string/cc_year_text"
            android:maxLength="2" />

        <EditText
            android:id="@+id/editTextCVV"
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.27"
            android:ems="10"
            android:hint="@string/cc_cvv_text"
            android:maxLength="3" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMessage"
         />

</LinearLayout>